@@ -1,3 +1,13 @@
+May 20, 2025: libarchive 3.8.0 released
+
+Mar 30, 2025: libarchive 3.7.9 released
+
+Mar 20, 2025: libarchive 3.7.8 released
+
+Oct 13, 2024: libarchive 3.7.7 released
+
+Sep 23, 2024: libarchive 3.7.6 released
+
 Sep 13, 2024: libarchive 3.7.5 released
 
 Apr 26, 2024: libarchive 3.7.4 released
